trying to fix footer glitch on mobile in landscape

--- a/css/navStyle.css
+++ b/css/navStyle.css
@@ -421,6 +421,9 @@ table{
   .sidenav{
     display:none;
   }
+  .footerLeft{
+    display:none;
+  }
 } 
 
 
